# armulator_lite

./: .gitignore  GRAMMAR.md  Makefile  README.md  basic.s  dune-project  ignored.txt  output.s  output1.s  test.s
armprograms/: bad_cc1.s  bad_cc2.s  bad_cc3.s  good_cc1.s  link.s  main.s  run1.s  run2.s  store.s  syscall_test.s  write.s  write2.s
lib/arm/: arm.ml  dune
lib/mach/: decoder.ml  dune  emulator.ml  fs.ml  mach.ml  memory.ml  system.ml
lib/parser/: arm_parser.ml  arm_stringifier.ml  arm_validator.ml  cmd_parser.ml  dune
lib/plugins/: dune  plugins.ml
src/: cc_validator.ml  dune  main.ml  plagiarism.ml  test_plugin.ml
src/arch_core/: decoder.ml  dune  emulator.ml  fs.ml  int64_overflow.ml  mach.ml  memory.ml  plugins.ml  validator.ml
src/asm/: arm.ml  dune
src/parsing/: arm_parser.ml  arm_stringifier.ml  cmd_parser.ml  dune
test/: dune  test_armulator_lite.ml
