(executable
 (public_name armulator_lite)
 (name main)
 (modules main)
 (promote (until-clean))
 (libraries dynlink str asm arch_core parsing))

(executable
 (name test_plugin)
 (modules test_plugin)
 (modes plugin)
 (libraries asm arch_core parsing))

(executable
 (name plagiarism)
 (modules plagiarism)
 (modes plugin)
 (libraries asm arch_core parsing))

(executable
 (name cc_validator)
 (modules cc_validator)
 (modes plugin)
 (libraries asm arch_core))