(library
  (name mach)
  (modules mach)
  (libraries arm arm_stringifier str num))

(library
  (name int64_overflow)
  (modules int64_overflow)
  (libraries num))

(library
  (name system)
  (modules system)
  (libraries arm mach decoder memory plugins fs))

(library
  (name fs)
  (modules fs)
  (libraries arm arm_parser mach decoder memory plugins))

(library
  (name memory)
  (modules memory)
  (libraries mach))

(library
  (name decoder)
  (modules decoder)
  (libraries arm mach))

(library
  (name emulator)
  (modules emulator)
  (libraries arm mach decoder int64_overflow system memory arm_parser plugins))


