(library
  (name cmd_parser)
  (modules cmd_parser)
  (libraries str))

(library
  (name arm_parser)
  (modules arm_parser)
  (libraries arm str))

(library
  (name arm_stringifier)
  (modules arm_stringifier)
  (libraries arm))

(library
  (name arm_validator)
  (modules arm_validator)
  (libraries mach arm_stringifier arm str decoder))

